# aws-nitro-enclaves-attestation

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
c-lib/: Cargo.toml  build.rs
c-lib/src/: lib.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: lib.rs  test_data.h
src/: lib.rs
tests/data/: ad_debug_mode.b64
