
[workspace]
members = [ "c-lib" ]
default-members = [ "c-lib" ]

[profile.release]
lto = true

[package]
name = "aws-nitro-enclaves-attestation"
version = "0.1.0"
authors = ["ppmag <mybestexpert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
aws-nitro-enclaves-cose = "0.1.0"
webpki = "0.21.4"


