[package]
name = "aws-nitro-enclaves-attestation-ffi"
version = "0.1.0"
authors = ["ppmag <mybestexpert@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "C/C++ bindings for attestation primitives library for use in AWS Nitro Enclave applications."
homepage = "https://github.com/ppmag/aws-nitro-enclaves-attestation/tree/main/ffi"
repository = "https://github.com/ppmag/aws-nitro-enclaves-attestation"
readme = "../README.md"
keywords = ["aws", "amazon", "enclave", "nitro", "attestation"]
categories = ["development-tools::ffi", "hardware-support", "parser-implementations", "cryptography"]

build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nitroattest"
crate-type = ["cdylib", "staticlib"]   

[dependencies]
libc = "0.2.91"
aws-nitro-enclaves-attestation = { path = "../" }

[build-dependencies]
cbindgen = "0.18.0"

[dev-dependencies]
inline-c = "0.1.5"
